--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -15,6 +15,7 @@ main {
 
 a {
     text-decoration: none;
-    color: #b82626;
+    color: #ffffff;
     font-size: 25px;
+    font-family:sans-serif ;
 }
